--- a/resources/views/games/index.edge
+++ b/resources/views/games/index.edge
@@ -7,23 +7,27 @@ All Games
 @section('content')
 
 <h1>All Games</h1>
-<table class='table-bordered'>
+<table class='table-bordered table-striped table-responsive'>
   <tr>
-    <th>ID</th>
-    <th>Title</th>
-    <th>Price</th>
-    <th>Release Date</th>
-    <th>Description</th>
-    <th>Image Link</th>
+    <th scope="col">ID</th>
+    <th scope="col">Title</th>
+    <th scope="col">Price</th>
+    <th scope="col">Publisher</th>
+    <th scope="col">Developer</th>
+    <th scope="col">Release Date</th>
+    <th scope="col">Description</th>
+    <th scope="col">Image Link</th>
   </tr>
   @each(game in games)
   <tr>
     <td>{{game.id}}</td>
     <td>{{game.title}}</td>
-    <td>{{game.price}}</td>
-    <td>{{game.release_date}}</td>
+    <td>${{game.price/100}}</td>
+    <td>{{game.publisher}}</td>
+    <td>{{game.developer}}</td>
+    <td style="word-wrap: break-word;">{{game.release_date}}</td>
     <td>{{game.description}}</td>
-    <td style="word-wrap: break-word;min-width: 160px;max-width: 160px;">{{game.image}}</td>
+    <td style="word-wrap: break-word;">{{game.image}}</td>
   </tr>
   @endeach
 </table>
