Added Add Game form

--- a/resources/views/games/index.edge
+++ b/resources/views/games/index.edge
@@ -7,7 +7,7 @@ All Games
 @section('content')
 
 <h1>All Games</h1>
-<table class='table-bordered table-striped table-responsive'>
+<table class='table-bordered table-striped table-responsive' style="text-align:center">
   <tr>
     <th scope="col">ID</th>
     <th scope="col">Title</th>
@@ -16,7 +16,7 @@ All Games
     <th scope="col">Developer</th>
     <th scope="col">Release Date</th>
     <th scope="col">Description</th>
-    <th scope="col">Image Link</th>
+    <th scope="col">Image</th>
   </tr>
   @each(game in games)
   <tr>
@@ -27,7 +27,7 @@ All Games
     <td>{{game.developer}}</td>
     <td style="word-wrap: break-word;">{{game.release_date}}</td>
     <td>{{game.description}}</td>
-    <td style="word-wrap: break-word;">{{game.image}}</td>
+    <td style="word-wrap: break-word;"><img src="{{game.image}}" style="width:200px"/></td>
   </tr>
   @endeach
 </table>
