Added button to direct to add game page

--- a/resources/views/games/index.edge
+++ b/resources/views/games/index.edge
@@ -7,6 +7,7 @@ All Games
 @section('content')
 
 <h1>All Games</h1>
+<a href="{{route('add_game')}}" class="btn btn-primary btn-block m-3">Add New Game</a>
 <table class='table-bordered table-striped table-responsive' style="text-align:center">
   <tr>
     <th scope="col">ID</th>
