Added publisher register page

--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -8,6 +8,7 @@ Publisher Login Portal
 <div class="d-flex justify-content-center align-items-center flex-column" style="height:90vh;">
   <h1 class=" mb-3">Publisher Login</h1>
   <form method="POST">
+    {{csrfField()}}
   <div class="form-group">
     <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter username">
   </div>
@@ -15,7 +16,7 @@ Publisher Login Portal
     <input type="password" class="form-control" placeholder="Enter password">
   </div>
   <button type="submit" class="btn btn-primary btn-block">Submit</button>
-  <a href="" class="btn btn-secondary btn-block">Register</a>
+  <a href="{{route('publisher_register')}}" class="btn btn-secondary btn-block">Register</a>
 </form>
 </div>
 @endsection
