--- a/resources/views/publishers/register.edge
+++ b/resources/views/publishers/register.edge
@@ -26,17 +26,23 @@ Publisher Registration
   </div>
   <div class="m-3">
     <label class="form-label">Confirm Password:</label>
-    <input type="password" name="password_confirmation" class="form-control"/>
+    <input type="password" name="password_confirmation" class="form-control" value="{{old('password_confirmation')}}"/>
   </div>
   <div class="m-3">
     <label class="form-label">CS Email Address:</label>
-    <input type="email" name="contact_email" class="form-control" aria-describedby="emailHelp">
+    <input type="email" name="contact_email" class="form-control {{hasErrorFor('contact_email') ? 'is-invalid': ''}}" value="{{old('contact_email')}}" aria-describedby="emailHelp">
     <small id="emailHelp" class="form-text text-muted">This email address will be used to contact your publisher team</small>
+    @if(hasErrorFor('contact_email'))
+    <div class='invalid-feedback'>{{getErrorFor('contact_email')}}</div>
+    @endif
   </div>
   <div class="m-3">
     <label class="form-label">Publisher Name:</label>
-    <input type="text" name="publisher_name" class="form-control"/>
-    <small id="emailHelp" class="form-text text-muted">This will be displayed as Publisher on your games</small>
+    <input type="text" name="publisher_name" class="form-control {{hasErrorFor('publisher_name') ? 'is-invalid': ''}}" value="{{old('publisher_name')}}" aria-describedby="publisherHelp"/>
+    <small id="publisherHelp" class="form-text text-muted">Make sure this is the official publisher name. This will be the Publisher name displayed on your games in the store</small>
+    @if(hasErrorFor('publisher_name'))
+    <div class='invalid-feedback'>{{getErrorFor('publisher_name')}}</div>
+    @endif
   </div>
   <div class="m-3">
     <input type="submit" class="btn btn-primary"/>
