Added logo to login and registration page

--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -5,8 +5,9 @@ Publisher Login Portal
 @endsection
 
 @section('content')
-<div class="d-flex justify-content-center align-items-center flex-column" style="height:90vh;">
-  <h1 class=" mb-3">Publisher Login</h1>
+<div class="d-flex justify-content-center align-items-center flex-column">
+  <img src="./images/mist-logo.png" class=" m-5"/>
+  <h1 class="mb-4">Publisher Login</h1>
   <form method="POST">
     {{csrfField()}}
   <div class="form-group">
