Added encryption for publishers login

--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -6,12 +6,12 @@ Publisher Login Portal
 
 @section('content')
 <div class="d-flex justify-content-center align-items-center flex-column">
-  <img src="./images/mist-logo.png" class=" m-5"/>
+  <img src="./images/mist-logo.png" class=" m-4"/>
   <h1 class="mb-4">Publisher Login</h1>
   <form method="POST">
     {{csrfField()}}
   <div class="form-group">
-    <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter username">
+    <input type="text" class="form-control" placeholder="Enter username">
   </div>
   <div class="form-group">
     <input type="password" class="form-control" placeholder="Enter password">
