--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -11,10 +11,10 @@ Publisher Login Portal
   <form method="POST">
     {{csrfField()}}
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Enter username">
+    <input type="text" name="username" class="form-control" placeholder="Enter username">
   </div>
   <div class="form-group">
-    <input type="password" class="form-control" placeholder="Enter password">
+    <input type="password" name="password" class="form-control" placeholder="Enter password">
   </div>
   <button type="submit" class="btn btn-primary btn-block">Submit</button>
   <a href="{{route('publisher_register')}}" class="btn btn-secondary btn-block">Register</a>
