Added publisher add game page

--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -5,6 +5,10 @@ All Games
 @endsection
 
 @section('content')
+<div class="d-flex justify-content-between align-items-center m-3">
+  <h1>All Games</h1>
+  <a href="{{route('publisher_add_game')}}" class="btn btn-primary ml-5 mr-5">Add New Game</a>
+</div>
 
-<h1>All Games</h1>
+
 @endsection
