--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -16,7 +16,7 @@ Publisher Login Portal
   <div class="form-group">
     <input type="password" name="password" class="form-control" placeholder="Enter password">
   </div>
-  <button type="submit" class="btn btn-primary btn-block">Submit</button>
+  <button type="submit" class="btn btn-primary btn-block">Login</button>
   <a href="{{route('publisher_register')}}" class="btn btn-secondary btn-block">Register</a>
 </form>
 </div>
