--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Own CSS -->
-    <link href="../css/publisher.css" type="text/css" rel="stylesheet" />
+    <link href="../../css/publisher.css" type="text/css" rel="stylesheet" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,19 +19,20 @@
   <body>
     <div class="sidenav">
       <div class="mb-3" style="text-align:center;">
+      <img src="../../images/mist-logo.png" class=" mb-3" style="width:100px;"/>
         <span style="color:white;">Welcome back, {{userData.username}}</span>
       </div>
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column">
-        <a href="#">Home</a>
-        <a href="#">Games</a>
-        <a href="#">Sales</a>
-        <a href="{{route('publisher_logout')}}">Logout</a>
+        <a class="mb-2 mt-2" href="#">Home</a>
+        <a class="mb-2 mt-2" href="{{route('publisher_games')}}">Games</a>
+        <a class="mb-2 mt-2" href="#">Sales</a>
+        <a class="mb-2 mt-2" href="{{route('publisher_logout')}}">Logout</a>
         </div>
       </div>
     </div>
-    <div class="main">
-      <div class="container m-3">
+    <div class="main container">
+      <div class="m-3">
           @section("content")
           @endsection
       </div>
