--- a/resources/views/base.edge
+++ b/resources/views/base.edge
@@ -14,6 +14,9 @@
     </title>
   </head>
   <body>
+    @if(flashMessage('notification'))
+      <div class="alert alert-success">{{ flashMessage('notification') }}</div>
+    @endif
     <div class="container">
         @section("content")
         @endsection
