--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -18,9 +18,9 @@
   </head>
   <body>
     <div class="sidenav">
-      <div class="mb-3" style="text-align:center;">
-      <img src="../../images/mist-logo.png" class=" mb-3" style="width:100px;"/>
-        <span style="color:white;">Welcome back, {{userData.username}}</span>
+      <div class="mb-3 d-flex flex-column align-items-center" style="text-align:center;">
+      <img src="../../images/mist-logo.png" class=" mb-3" style="width:120px;"/>
+        <span style="color:white;">Welcome back, {{auth.user.username}}</span>
       </div>
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column">
@@ -31,8 +31,8 @@
         </div>
       </div>
     </div>
-    <div class="main container">
-      <div class="m-3">
+    <div class="main" style="width:75vw; margin-left:180px;">
+      <div class="m-3 container">
           @section("content")
           @endsection
       </div>
