--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -11,10 +11,16 @@ Publisher Login Portal
   <form method="POST">
     {{csrfField()}}
   <div class="form-group">
-    <input type="text" name="username" class="form-control" placeholder="Enter username">
+    <input type="text" name="username" class="form-control {{hasErrorFor('username') ? 'is-invalid': ''}}" value="{{old('username')}}" placeholder="Enter username">
+      @if(hasErrorFor('username'))
+      <div class='invalid-feedback'>{{getErrorFor('username')}}</div>
+      @endif
   </div>
   <div class="form-group">
-    <input type="password" name="password" class="form-control" placeholder="Enter password">
+    <input type="password" name="password" class="form-control {{hasErrorFor('password') ? 'is-invalid': ''}}" value="{{old('password')}}" placeholder="Enter password">
+      @if(hasErrorFor('password'))
+      <div class='invalid-feedback'>{{getErrorFor('password')}}</div>
+      @endif
   </div>
   <button type="submit" class="btn btn-primary btn-block">Login</button>
   <a href="{{route('publisher_register')}}" class="btn btn-secondary btn-block">Register</a>
