--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -20,7 +20,7 @@
     <div class="sidenav">
       <div class="mb-3 d-flex flex-column align-items-center" style="text-align:center;">
       <img src="../../images/mist-logo.png" class=" mb-3" style="width:120px;"/>
-        <span style="color:white;">Welcome back, {{auth.user.username}}</span>
+        <span style="color:white;" class="m-2">Welcome back, {{auth.user.username}}</span>
       </div>
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column">
@@ -43,5 +43,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    @section('scripts')
+    @endsection
   </body>
 </html>
