--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -31,8 +31,8 @@
         </div>
       </div>
     </div>
-    <div class="main" style="width:75vw; margin-left:180px;">
-      <div class="m-3 container">
+    <div class="main" style="width:85vw; margin-left:180px;">
+      <div class="m-3">
           @section("content")
           @endsection
       </div>
