--- a/resources/views/publishers/add_game.edge
+++ b/resources/views/publishers/add_game.edge
@@ -20,7 +20,7 @@ Add Game
   </div>
   <div class="m-3">
     <label class="form-label">Price (USD):</label>
-    <input type="number" name="price" step="0.01" class="form-control {{hasErrorFor('price') ? 'is-invalid': ''}}" value="{{old('price')}}"/>
+    <input type="number" name="price" step="0.01" min="0" class="form-control {{hasErrorFor('price') ? 'is-invalid': ''}}" value="{{old('price')}}"/>
       @if(hasErrorFor('price'))
       <div class='invalid-feedback'>{{getErrorFor('price')}}</div>
       @endif
