Added update page

--- a/resources/views/publishers/index.edge
+++ b/resources/views/publishers/index.edge
@@ -6,7 +6,7 @@ Publisher Login Portal
 
 @section('content')
 <div class="d-flex justify-content-center align-items-center flex-column">
-  <img src="./images/mist-logo.png" class=" m-4"/>
+  <img src="/images/mist-logo.png" class=" m-4"/>
   <h1 class="mb-4">Publisher Login</h1>
   <form method="POST">
     {{csrfField()}}
