--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Own CSS -->
-    <link href="../../css/publisher.css" type="text/css" rel="stylesheet" />
+    <link href="/css/publisher.css" type="text/css" rel="stylesheet" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,7 +19,7 @@
   <body>
     <div class="sidenav">
       <div class="mb-3 d-flex flex-column align-items-center" style="text-align:center;">
-      <img src="../../images/mist-logo.png" class=" mb-3" style="width:120px;"/>
+      <img src="/images/mist-logo.png" class=" mb-3" style="width:120px;"/>
         <span style="color:white;" class="m-2">Welcome back, {{auth.user.username}}</span>
       </div>
       <div class="d-flex justify-content-center">
