--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -1,12 +1,12 @@
 @layout('publisher_base')
 
 @section('title')
-All Games
+{{auth.user.publisher_name}} - Games
 @endsection
 
 @section('content')
 <div class="d-flex justify-content-between align-items-center m-3">
-  <h1>All Games</h1>
+  <h1>Your Published Game Titles</h1>
   <a href="{{route('publisher_add_game')}}" class="btn btn-primary ml-5 mr-5">Add New Game</a>
 </div>
 
@@ -14,32 +14,34 @@ All Games
 
   @each(game in games)
   <tr>
-    <th scope="col">ID</th>
+    <th scope="col" style="width:60px;">ID</th>
     <th scope="col" style="width:400px;">Title</th>
     <th scope="col">Price</th>
     <th scope="col">Developer</th>
     <th scope="col">Publisher</th>
     <th scope="col">Release Date</th>
-    <th scope="col">Verified</th>
+    <th scope="col" style="width:80px;">Verified</th>
+    <th scope="col" rowspan="3" style="width:80px;"><a class>Update</a></th>
   </tr>
   <tr>
-    <td>{{game.id}}</td>
+    <td rowspan="3">{{game.id}}</td>
     <td>{{game.title}}</td>
     <td>${{game.price/100}}</td>
     <td>{{game.developer}}</td>
     <td>{{game.publisher}}</td>
     <td style="word-wrap: break-word;">{{game.release_date}}</td>
-    <td>{{game.verified}}</td>
+    <td rowspan="3">{{game.verified}}</td>
   </tr>
   <tr>
     <th scope="col" colspan="2">Description</th>
-    <th scope="col" colspan="3">Image</th>
-    <th scope="col" colspan="2">Trailer</th>
+    <th scope="col" colspan="2">Image</th>
+    <th scope="col">Trailer</th>
   </tr>
   <tr>
     <td colspan="2">{{game.description}}</td>
-    <td colspan="3"><img src="{{game.image}}" style="width:200px"/></td>
-    <td colspan="2">{{game.trailer}}</td>
+    <td colspan="2"><img src="{{game.image}}" style="width:200px"/></td>
+    <td>{{game.trailer}}</td>
+    <td>Delete</td>
   </tr>
   @endeach
 </table>
