--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -7,21 +7,21 @@
 @section('content')
 <div class="d-flex justify-content-between align-items-center m-3">
   <h1>Your Published Game Titles</h1>
-  <a href="{{route('publisher_add_game')}}" class="btn btn-primary ml-5 mr-5">Add New Game</a>
+  <a href="{{route('publisher_add_game')}}" class="btn btn-success ml-5 mr-5">Add New Game</a>
 </div>
 
   <table class='table-bordered table-striped table-responsive' style="text-align:center">
 
   @each(game in games)
   <tr>
-    <th scope="col" style="width:60px;">ID</th>
+    <th scope="col">Game ID</th>
     <th scope="col" style="width:400px;">Title</th>
     <th scope="col">Price</th>
     <th scope="col">Developer</th>
     <th scope="col">Publisher</th>
     <th scope="col">Release Date</th>
     <th scope="col" style="width:80px;">Verified</th>
-    <th scope="col" rowspan="3" style="width:80px;"><a class>Update</a></th>
+    <th rowspan="3" style="width:80px;"><a href="{{ route('publisher_update_game', {game_id:game.id})}}" class="btn btn-warning">Update</a></th>
   </tr>
   <tr>
     <td rowspan="3">{{game.id}}</td>
@@ -41,7 +41,7 @@
     <td colspan="2">{{game.description}}</td>
     <td colspan="2"><img src="{{game.image}}" style="width:200px"/></td>
     <td>{{game.trailer}}</td>
-    <td>Delete</td>
+    <td><a href="{{ route('publisher_delete_game', {game_id:game.id})}}" class="btn btn-danger">Update</a></td>
   </tr>
   @endeach
 </table>
