Added select2 for categories

--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -40,7 +40,7 @@
     <td colspan="5">{{game.description}}</td>
   </tr>
   <tr>
-    <th scope="col" colspan="2">Genre</th>
+    <th scope="col" colspan="2">Tags</th>
     <th scope="col" colspan="2">Image</th>
     <th scope="col">Trailer</th>
   </tr>
