--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
 
     <title>
      @section('title')
@@ -19,10 +19,6 @@
     </title>
   </head>
   <body>
-    @if(flashMessage('notification'))
-      <div class="alert alert-danger">{{ flashMessage('notification') }}</div>
-    @endif
-
     <div class="sidenav">
       <div class="mb-3 d-flex flex-column align-items-center" style="text-align:center;">
       <img src="/images/mist-logo.png" class=" mb-3" style="width:120px;"/>
@@ -39,6 +35,9 @@
       </div>
     </div>
     <div class="main" style="width:85vw; margin-left:170px;">
+      @if(flashMessage('notification'))
+        <div class="alert alert-danger">{{ flashMessage('notification') }}</div>
+      @endif
       <div class="m-3">
           @section("content")
           @endsection
@@ -50,7 +49,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
     @section('scripts')
     @endsection
   </body>
