--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <div class="main" style="width:85vw; margin-left:170px;">
+    <div class="main">
       @if(flashMessage('notification'))
         <div class="alert alert-danger">{{ flashMessage('notification') }}</div>
       @endif
