--- a/resources/views/publishers/games.edge
+++ b/resources/views/publishers/games.edge
@@ -7,7 +7,7 @@
 @section('content')
 <div class="d-flex justify-content-between align-items-center m-3">
   <h1>Your Published Game Titles</h1>
-  <a href="{{route('publisher_add_game')}}" class="btn btn-success ml-5 mr-5">Add New Game</a>
+  <a href="{{route('publisher_add_game')}}" class="btn btn-success m-3">Add New Game</a>
 </div>
 
   <table class='table-bordered table-striped table-responsive' style="text-align:center">
@@ -45,7 +45,11 @@
     <th scope="col">Trailer</th>
   </tr>
   <tr>
-    <td colspan="2">NIL</td>
+    <td colspan="2">
+      @each(tag in game.tags)
+      {{tag.tag_name}},
+      @endeach
+    </td>
     <td colspan="2"><img src="{{game.image}}" style="height:150px"/></td>
     <td><iframe width="267" height="160" src="{{game.trailer}}" frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
