Updated date display formats

--- a/resources/views/publisher_base.edge
+++ b/resources/views/publisher_base.edge
@@ -36,7 +36,7 @@
     </div>
     <div class="main">
       @if(flashMessage('notification'))
-        <div class="alert alert-danger">{{ flashMessage('notification') }}</div>
+        <div class="alert alert-success">{{ flashMessage('notification') }}</div>
       @endif
       <div class="m-3">
           @section("content")
